# google-flights-mcp

./: AMADEUS_API_ENDPOINTS_ANALYSIS.md  AMADEUS_EXAMPLE.md  AMADEUS_README.md  Amadeus for Developers.postman_collection.json  COMPARISON.md  Dockerfile  FIXES_SUMMARY.md  FLIGHT_HOTEL_API_FIXES.md  LICENSE  MIGRATION_TO_V2.2.md  PLAYWRIGHT_FALLBACK_ANALYSIS.md  README.md  RETURN_FLIGHT_ANALYSIS.md  RETURN_FLIGHT_PROBLEM.md  SERPAPI_VS_FASTFLIGHTS.md  TOOLS_SIMPLIFICATION.md  TRANSFER_API_FIX.md  VERSION_COMPARISON.md  investigate_raw_data.py  pyproject.toml  requirements.txt  server.py  test_actual_roundtrip.py  test_amadeus_server.py  test_confirm_price_fix.py  test_direct_roundtrip.py  test_flight_data.py  test_multi_city_fallback.py  test_parsing.py  test_round_trip_data.py  test_simple_datetime.py  test_transfer_validation.py  test_v2_integration.py
src/mcp_server_amadeus/: __init__.py  server.py
src/mcp_server_google_flights/: __init__.py  hybrid_search.py  serpapi_client.py  server.py
tests/: README.md  __init__.py  conftest.py  test_api_migration.py
