[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-google-flights"
version = "0.1.0"
description = "A powerful MCP server for intelligent flight search using Google Flights"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HaroldLeo", email = "harold@example.com"}
]
keywords = ["mcp", "google-flights", "flights", "travel", "model-context-protocol", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.2.0",
    "fast-flights==2.2",
    "google-search-results>=2.4.2",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]

[project.urls]
Homepage = "https://github.com/HaroldLeo/google-flights-mcp"
Repository = "https://github.com/HaroldLeo/google-flights-mcp"
Issues = "https://github.com/HaroldLeo/google-flights-mcp/issues"

[project.scripts]
mcp-server-google-flights = "mcp_server_google_flights:main"
mcp-server-amadeus = "mcp_server_amadeus:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_google_flights", "src/mcp_server_amadeus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
